# CMake

./: .gitlab-ci.yml  .pre-commit-config.yaml  .typos.toml  bootstrap  llpkgc.h  llpkgc_dep.c  llpkgc_dep__internal.c  llpkgc_dep__internal.h  llpkgc_file.h  llpkgc_file__internal.c  llpkgc_frag__internal.h
.gitlab/: os-macos.yml
.gitlab/ci/: configure_windows_clang_ninja.cmake
Help/command/: add_dependencies.rst  add_executable.rst  add_library.rst  cmake_language.rst  math.rst  set_property.rst  set_target_properties.rst  string.rst  target_compile_definitions.rst  target_compile_features.rst  target_compile_options.rst  target_include_directories.rst  target_link_directories.rst  target_link_libraries.rst  target_link_options.rst  target_precompile_headers.rst  target_sources.rst
Help/generator/: Visual Studio 14 2015.rst
Help/manual/: cmake-buildsystem.7.rst  cmake-cxxmodules.7.rst  cmake-instrumentation.7.rst  ctest.1.rst
Help/manual/instrumentation/: snippet-v1-schema.json
Help/prop_test/: GENERATED_RESOURCE_SPEC_FILE.rst
Help/prop_tgt/: ALIASED_TARGET.rst
Help/release/: 4.4.rst
Help/release/dev/: alias-transparency-install.rst  alias-transparency.rst  cps-file-sets.rst  cps-import-executable.rst  ctest-dyn-rsrc-spec-rel-path.rst  ctest-launch-signal-passthrough.rst  ctest-windows-jobserver.rst  cuda-toolkit-namespace.rst  deprecated-commands.rst  instrumentation-interrupt.rst  math-increment-decrement.rst  print_targets.rst  remove-vs14-generator.rst
Help/variable/: CMAKE_LANG_COMPILER.rst  CMAKE_VS_INTEL_Fortran_PROJECT_VERSION.rst  CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION_MAXIMUM.rst
Modules/: CMakeDetermineCompiler.cmake  CMakeDetermineCompilerId.cmake  CMakeDetermineSystem.cmake  CPackIFW.cmake  CXX-DetectStdlib.h  CheckFunctionExists.cmake  CheckIncludeFile.cmake  CheckIncludeFileCXX.cmake  CheckIncludeFiles.cmake  CheckLibraryExists.cmake  CheckPrototypeDefinition.cmake  CheckSymbolExists.cmake  CheckTypeSize.cmake  FindCUDAToolkit.cmake  FindTCL.cmake  FindTclStub.cmake  FindTclsh.cmake  FindWish.cmake  GoogleTest.cmake  GoogleTestAddTests.cmake
Modules/Compiler/: Clang-CXX-CXXImportStd.cmake  MSVC-CXX-CXXImportStd.cmake
Modules/FindPython/: Support.cmake
Modules/GoogleTest/: ParseTestList.cmake
Modules/Internal/: CheckCommon.cmake  CheckSourceCompiles.cmake  CheckSourceRuns.cmake
Source/: CMakeLists.txt  CMakeVersion.cmake  cmAddDependenciesCommand.cxx  cmAddExecutableCommand.cxx  cmAddLibraryCommand.cxx  cmBinUtilsLinker.h  cmBinUtilsLinuxELFLinker.cxx  cmBinUtilsLinuxELFLinker.h  cmBinUtilsMacOSMachOLinker.cxx  cmBinUtilsMacOSMachOLinker.h  cmBinUtilsWindowsPELinker.cxx  cmBinUtilsWindowsPELinker.h  cmCMakeLanguageCommand.cxx  cmCMakePkgConfigCommand.cxx  cmCMakeSarifLogger.cxx  cmCTest.cxx  cmCTest.h  cmCommands.cxx  cmCommonTargetGenerator.cxx  cmComputeLinkDepends.cxx  cmComputeLinkInformation.cxx  cmComputeTargetDepends.cxx  cmCoreTryCompile.cxx  cmCoreTryCompile.h  cmCustomCommandGenerator.cxx  cmExportAndroidMKGenerator.cxx  cmExportAndroidMKGenerator.h  cmExportBuildAndroidMKGenerator.cxx  cmExportBuildAndroidMKGenerator.h  cmExportBuildCMakeConfigGenerator.cxx  cmExportBuildFileGenerator.cxx  cmExportBuildFileGenerator.h  cmExportBuildPackageInfoGenerator.cxx  cmExportCMakeConfigGenerator.cxx  cmExportCMakeConfigGenerator.h  cmExportCommand.cxx  cmExportFileGenerator.cxx  cmExportInstallAndroidMKGenerator.cxx  cmExportInstallAndroidMKGenerator.h  cmExportInstallCMakeConfigGenerator.cxx  (+118 more)
Source/CTest/: cmCTestConfigureCommand.cxx  cmCTestLaunch.cxx  cmCTestMultiProcessHandler.cxx  cmCTestTestHandler.cxx  cmUVJobServerClient.cxx
Source/CursesDialog/: cmCursesMainForm.cxx
Source/QtDialog/: QCMake.cxx
Tests/: CMakeLists.txt  CheckFortran.cmake
Tests/CMakeLib/: testDebuggerVariablesHelper.cxx  testUVJobServerClient.cxx
Tests/Cuda/Sanitizer/: CMakeLists.txt
Tests/Cuda/Toolkit/: CMakeLists.txt
Tests/Cuda/ToolkitBeforeLang/: CMakeLists.txt
Tests/CudaOnly/Fatbin/: CMakeLists.txt
Tests/CudaOnly/SeparateCompilationPTX/: CMakeLists.txt
Tests/CudaOnly/SharedRuntimePlusToolkit/: CMakeLists.txt
Tests/CudaOnly/Toolkit/: CMakeLists.txt
Tests/FindPackageCpsTest/: CMakeLists.txt
Tests/FindPackageCpsTest/cps/: filesets-anonymous.cps  filesets-named.cps  foo.cps  foo@default.cps
Tests/Fuzzing/: cmPkgConfigParserFuzzer.cxx
Tests/RunCMake/: CMakeLists.txt
Tests/RunCMake/CMP0194/: CMP0194-WARN-stderr.txt
Tests/RunCMake/CMakePresetsWorkflow/: RunCMakeTest.cmake
Tests/RunCMake/CTest/: ColorOutput-test-check.cmake  ColorOutput.cmake  RunCMakeTest.cmake
Tests/RunCMake/CTestCommandLine/: RunCMakeTest.cmake  configure-site-buildname-no-unused-cli-stderr.txt  output-junit-invalid-check.cmake  output-junit-invalid-stderr.txt
Tests/RunCMake/CTestLaunch/: RunCMakeTest.cmake  instrument-signal-check.cmake  launch-signal-logs-check.cmake
Tests/RunCMake/CTestResourceAllocation/: RunCMakeTest.cmake  dynamic-resource-relative-path-test-dir.cmake
Tests/RunCMake/CXXModulesCompile/: RunCMakeTest.cmake
Tests/RunCMake/CXXModulesCompile/multi-config-synth/: CMakeLists.txt
Tests/RunCMake/CXXModulesCompile/multi-config-synth/consumer/: CMakeLists.txt  main.cxx
Tests/RunCMake/CommandLine/: RunCMakeTest.cmake  WuninitializedCMakeRoot-check.cmake  WuninitializedCMakeRoot-prep.cmake  WuninitializedCMakeRoot.cmake  llvm_rc_full_run-check.cmake  trace-json-v1-check.py
Tests/RunCMake/CompileWarningAsError/: RunCMakeTest.cmake
Tests/RunCMake/CompilerChange/: CMakeLists.txt  CMakePresets.json.in  (+9 more)
Tests/RunCMake/Instrumentation/project/: CMakeLists.txt  runtest.cmake
Tests/RunCMake/Instrumentation/project/installSlow3/: CMakeLists.txt
Utilities/: CMakeLists.txt
Utilities/IWYU/: mapping.imp
Utilities/Scripts/: regenerate-presets.py  update-bzip2.bash  update-llpkgc.bash
Utilities/cmbzip2/: bzip2recover.c  bzlib.c  compress.c
Utilities/cmcurl/: CMakeLists.txt
Utilities/cmllpkgc/: CMakeLists.txt  LICENSE.rst  llpkgc_dep.h  llpkgc_file.c  llpkgc_file__internal.h  llpkgc_frag.c  llpkgc_frag.h  llpkgc_frag__internal.c
(+140 files in other folders)
